@@ -8,17 +8,22 @@
 <img ismap tal:attributes="ismap true">
 <img ismap tal:attributes="ismap false">
 <img ismap tal:attributes="ismap nothing">
+<img ismap tal:attributes="ismap default">
 
 <img ismap="foo" tal:attributes="ismap true">
 <img ismap="foo" tal:attributes="ismap false">
 <img ismap="foo" tal:attributes="ismap nothing">
+<img ismap="foo" tal:attributes="ismap default">
 
 <img tal:attributes="ismap true">
 <img tal:attributes="ismap false">
 <img tal:attributes="ismap nothing">
+<img tal:attributes="ismap default">
 
 <span tal:define="global x string:x.gif" />
 
 <img src="foo">
 <img src="foo" tal:attributes="src x">
 <img src="foo" tal:attributes="src nothing">
+<img src="foo" tal:attributes="src default">
+<img tal:attributes="src default">
