@@ -8,12 +8,15 @@
 <img ismap="ismap">
 <img>
 <img>
+<img ismap="ismap">
 
 <img ismap="ismap">
 <img>
 <img>
+<img ismap="foo">
 
 <img ismap="ismap">
+<img>
 <img>
 <img>
 
@@ -21,4 +24,6 @@
 
 <img src="foo">
 <img src="x.gif">
+<img>
+<img src="foo">
 <img>
